add html header and icons

--- a/index.html
+++ b/index.html
@@ -4,10 +4,32 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Rock Paper Scissors</title>
+    <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
+    <div class="header">
+        <p>ROCK PAPER SCISSORS</p>
+    </div>
+    <div class="container">
+        <div>
+            <p>A classic game of rock paper scissors. First to 5 points will win the match!</p>
+        </div>
+        <div class="button-container">
+            <button>
+                <div class="icons">✊</div>
+            </button>
+            <button>
+                <div class="icons">✋</div>
+            </button>
+            <button>
+                <div class="icons">✌</div>
+            </button>
+        </div>
+        <div>
+            <p>Can you win against the mighty Computer???</p>
+        </div>
+    </div>
     <script src="script.js"></script>
-    
 </body>
 </html>
