link buttons with console game

--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
             <p>A classic game of rock paper scissors. First to 5 points will win the match!</p>
         </div>
         <div class="button-container">
-            <button>
+            <button id="rockButton">
                 <div class="icons">✊</div>
             </button>
-            <button>
+            <button id="paperButton">
                 <div class="icons">✋</div>
             </button>
-            <button>
+            <button id="scissorsButton">
                 <div class="icons">✌</div>
             </button>
         </div>
