add scoreboard and footer

--- a/index.html
+++ b/index.html
@@ -11,6 +11,16 @@
     <div class="header">
         <p>ROCK PAPER SCISSORS</p>
     </div>
+    <div class="scoreBoard">
+        <div class="scores">
+            <div class="choice" id="playerC">-</div>
+            <div class="score" id="playerScore">Player: 0</div>
+        </div>
+        <div class="scores">
+            <div class="choice" id="computerC">-</div>
+            <div class="score" id="computerScore">Computer: 0</div>
+        </div>
+    </div>
     <div class="container">
         <div>
             <p>A classic game of rock paper scissors. First to 5 points will win the match!</p>
@@ -29,6 +39,9 @@
         <div>
             <p>Can you win against the mighty Computer???</p>
         </div>
+    </div>
+    <div class="footer">
+        <p>made by Derek Xu</p>
     </div>
     <script src="script.js"></script>
 </body>
