--- a/index.html
+++ b/index.html
@@ -14,13 +14,14 @@
     <div class="scoreBoard">
         <div class="scores">
             <div class="choice" id="playerC">-</div>
-            <div class="score" id="playerScore">Player: 0</div>
+            <div class="score" id="playerS">Player: 0</div>
         </div>
         <div class="scores">
             <div class="choice" id="computerC">-</div>
-            <div class="score" id="computerScore">Computer: 0</div>
+            <div class="score" id="computerS">Computer: 0</div>
         </div>
     </div>
+    <div class="results" id="roundResult">-</div>
     <div class="container">
         <div>
             <p>A classic game of rock paper scissors. First to 5 points will win the match!</p>
