add reset game button

--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
         </div>
     </div>
     <div class="results" id="roundResult">-</div>
+    <div class="reset">
+        <button id="resetButton">reset</button>
+    </div>
     <div class="container">
         <div>
             <p>A classic game of rock paper scissors. First to 5 points will win the match!</p>
